--- a/scss/_c-input.scss
+++ b/scss/_c-input.scss
@@ -2,19 +2,65 @@
   c-input
    ========================================================================== */
 
+.control {
+    border-bottom: 1px solid #bbb;
+    position: relative;
+}
 input, .input {
     line-height: 1.5;
-    margin: 0;
     height: 2.1em;
-    padding: .3em .6em;
-    border: 1px solid #ccc;
+    border: none;
     background-color: #fff;
-    border-radius: .2em;
-    transition: all 0.3s;
-    width: 100%;
+    transition: all 0.3s ease-out;
+    margin-top: 20px;
+    padding-left: 6px;
+    // border-radius: .2em;
+    // width: 100%;
+    // padding: .3em .6em;
+    // border: 2px solid #ccc;
 
     &:focus {
-        border: 1px solid #333;
+        // border: 2px solid #aaa;
         outline: 0;
     }
+    &:required::placeholder {
+        color: $g-primary-color-darker;
+    }
 }
+
+label {
+    position: absolute;
+    font-size: 14px;
+    top: 5px;
+    left: 4px;
+    color: $g-primary-color-dark;
+}
+
+input:invalid {
+	background: rgba(207, 163, 19, 0.1);
+}
+
+input:placeholder-shown + label {
+    opacity: 0;
+}
+
+input:not(:placeholder-shown) + label {
+    opacity: 1;
+	display: block;
+	position: absolute;
+	color: $g-primary-color-dark;
+    @include transition(opacity, .3s, ease-out);
+    &::after {
+        content: ' *';
+        color: #222;
+    }
+}
+
+input:not(:placeholder-shown):invalid {
+    background: rgba(207, 19, 19, 0.1);
+    @include transition(all, 4s, ease-out);
+}
+// input:not(:placeholder-shown):not(:focus):invalid {
+// 	background: rgba(207, 19, 19, 0.1);
+//     @include transition(all, .3s, ease-out)
+// }
